# wijjit-ssh

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  SPEC.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
deploy/: Dockerfile  README.md  compose.yaml  healthcheck.py  wijjit-ssh.service
docs/: Makefile  make.bat
docs/source/: changelog.md  conf.py  contributing.md  index.rst
docs/source/api/: auth.rst  backend.rst  config.rst  input.rst  keys.rst  limits.rst  logging.rst  server.rst
docs/source/examples/: chat.rst  dashboard.rst  index.rst
docs/source/getting_started/: installation.rst  quickstart.rst
docs/source/guide/: authentication.rst  deployment.rst  host_keys.rst  limits.rst  logging.rst  shutdown.rst  terminal_input.rst
examples/: chat_ssh.py  dashboard_ssh.py  hello_ssh.py
src/wijjit_ssh/: __init__.py  auth.py  backend.py  config.py  input.py  keys.py  limits.py  logging.py  server.py
tests/: __init__.py  _client.py  conftest.py  test_auth.py  test_config.py  test_input_decoder.py  test_keys.py  test_limits.py  test_logging.py  test_roundtrip.py  test_shutdown.py
