[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wijjit-ssh"
version = "0.0.1"
description = "Serve Wijjit TUI apps over SSH - Flask for SSH apps."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Tom Villani", email = "thomas.villani@gmail.com" }]
keywords = ["ssh", "tui", "terminal", "wijjit", "asyncssh"]
dependencies = [
    "wijjit>=0.1.0",
    "asyncssh>=2.14",
    "prompt-toolkit>=3.0",
]

[project.urls]
Homepage = "https://github.com/tomvillani/wijjit-ssh"
Wijjit = "https://github.com/tomvillani/wijjit"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    # A real VT emulator. The round-trip tests need one because Wijjit's diff
    # renderer sends a transcript, not a picture: only an emulator reconstructs
    # the screen a user would actually see. See tests/_client.py.
    "pyte>=0.8",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wijjit_ssh"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.11"
strict = true
