[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wijjit-ssh"
# Single-sourced from src/wijjit_ssh/__init__.py; see [tool.hatch.version].
dynamic = ["version"]
description = "Serve Wijjit TUI apps over SSH - Flask for SSH apps."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "Tom Villani", email = "thomas.villani@gmail.com" }]
keywords = ["ssh", "tui", "terminal", "wijjit", "asyncssh", "server"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Topic :: Terminals",
    "Typing :: Typed",
]
dependencies = [
    "wijjit>=0.1.0",
    "asyncssh>=2.14",
]

[project.urls]
Homepage = "https://github.com/thomas-villani/wijjit-ssh"
Documentation = "https://thomas-villani.github.io/wijjit-ssh/"
Repository = "https://github.com/thomas-villani/wijjit-ssh"
Issues = "https://github.com/thomas-villani/wijjit-ssh/issues"
Changelog = "https://github.com/thomas-villani/wijjit-ssh/blob/main/CHANGELOG.md"
Wijjit = "https://github.com/thomas-villani/wijjit"

[tool.uv.sources]
# wijjit is not published yet, so uv cannot resolve `wijjit>=0.1.0` from PyPI
# and every `uv run` would fail. Point it at the sibling checkout instead.
#
# Editable, and deliberately a path rather than a git ref: the two libraries are
# developed in tandem, so wijjit-ssh's tests should run against the working tree
# next door. A git source would test against whatever was last pushed, and make
# every wijjit change need a commit before this repo could see it.
#
# Assumes the layout the README documents (wijjit and wijjit-ssh side by side).
# Delete this section once wijjit is on PyPI - the dependency pin already says
# what it needs. uv strips [tool.uv.sources] from published metadata, so this
# never reaches anyone installing the package.
wijjit = { path = "../wijjit", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=6.0",
    # A real VT emulator. The round-trip tests need one because Wijjit's diff
    # renderer sends a transcript, not a picture: only an emulator reconstructs
    # the screen a user would actually see. See tests/_client.py.
    "pyte>=0.8",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
# Not in `dev`, and so not installed by a plain `uv sync`: Sphinx and its theme
# pull in a couple of dozen packages that a contributor running the test suite
# has no use for. `uv sync --group docs` when you want to build the site.
docs = [
    "sphinx>=8.2",
    "sphinx-rtd-theme>=3.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-tabs>=3.4.7",
    "myst-parser>=2.0",
]

[tool.hatch.version]
path = "src/wijjit_ssh/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/wijjit_ssh"]

# Explicit sdist contents so the build is deterministic and never walks stray
# local directories (this repo keeps a .venv/ in tree).
[tool.hatch.build.targets.sdist]
include = [
    "src/wijjit_ssh",
    "tests",
    "examples",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "spec.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
# Pinned, not inferred: without it black guesses a target from the installed
# interpreter and warns that it "cannot parse code formatted for Python 3.15",
# which is a warning in every CI log that everyone then learns to ignore.
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
